--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "dev:frontend": "cd apps/frontend && yarn dev"
+    "dev:frontend": "cd apps/frontend && yarn dev",
+    "start:frontend": "cd apps/frontend && yarn dev"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
