--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,12 +16,22 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@turbo/gen": "^1.10.12",
-    "@types/node": "^20.5.2",
     "@types/eslint": "^8.44.7",
+    "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.53.0",
     "react": "^18.2.0",
     "typescript": "^5.2.2"
-  }
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "react-slick": "^0.29.0",
+    "tailwindcss": "^3.4.0"
+  },
+  "files": [
+    "src",
+    "assets"
+  ]
 }
