--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,8 @@
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
     "./navbar": "./src/navbar.tsx",
-    "./carousel": "./src/carousel.tsx"
+    "./carousel": "./src/carousel.tsx",
+    "./moviesRow": "./src/moviesRow.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -29,6 +30,7 @@
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
+    "react-magic-slider-dots": "^1.2.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.0"
