--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,7 +11,8 @@
     "./moviesRow": "./src/moviesRow.tsx",
     "./promotionBanner": "./src/promotionBanner.tsx",
     "./showKindChooser": "./src/showKindChooser.tsx",
-    "./title": "./src/title.tsx"
+    "./title": "./src/title.tsx",
+    "./ticketOptions": "./src/ticketOptions.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -30,12 +31,21 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@emotion/types": "^0.7.0",
+    "@mui/material": "^5.15.3",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.3.0",
     "react-magic-slider-dots": "^1.2.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.6",
     "tailwindcss": "^3.4.0"
   },
   "files": [
