--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,8 @@
     "./promotionBanner": "./src/promotionBanner.tsx",
     "./showKindChooser": "./src/showKindChooser.tsx",
     "./title": "./src/title.tsx",
-    "./ticketOptions": "./src/ticketOptions.tsx"
+    "./ticketOptions": "./src/ticketOptions.tsx",
+    "./theatresAvailabilityComponent": "./src/theatresAvailabilityComponent.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
