--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,7 +15,8 @@
     "./ticketOptions": "./src/ticketOptions.tsx",
     "./theatresAvailabilityComponent": "./src/theatresAvailabilityComponent.tsx",
     "./seatLayoutHeader": "./src/seatLayoutHeader.tsx",
-    "./showTimeChooser": "./src/showTimeChooser.tsx"
+    "./showTimeChooser": "./src/showTimeChooser.tsx",
+    "./seatingRepresentation": "./src/seatingRepresentation.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
