--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,7 +18,8 @@
     "./showTimeChooser": "./src/showTimeChooser.tsx",
     "./seatingRepresentation": "./src/seatingRepresentation.tsx",
     "./numOfSeatsModel": "./src/numOfSeatsModel.tsx",
-    "./termsAndConditionsModel": "./src/termsAndConditionsModel.tsx"
+    "./termsAndConditionsModel": "./src/termsAndConditionsModel.tsx",
+    "./paymentComponent": "./src/paymentComponent.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
