--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,7 +13,9 @@
     "react": "^18",
     "react-dom": "^18",
     "recoil": "^0.7.7",
-    "ui": "*"
+    "ui": "*",
+    "common": "*",
+    "state": "*"
   },
   "devDependencies": {
     "@types/node": "^20",
