--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,15 +1,23 @@
-
 {
   "name": "backend",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "npx tsx watch src/index.ts",
     "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --external:express --external:cors",
     "start": "node dist/index.js",
     "type-check": "tsc"
   },
   "dependencies": {
+    "common": "*",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "routing-controllers": "^0.10.4",
+    "tmdb": "*",
+    "typedi": "^0.10.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -19,5 +27,5 @@
     "types": "workspace:*",
     "typescript": "^4.8.4"
   },
-  "private":true
+  "private": true
 }
