--- a/packages/axios/tsconfig.json
+++ b/packages/axios/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "dist"
   },
-  "include": ["src", "../packages/axios/src/index", "../packages/common/src/index"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
