--- a/packages/tmdb/package.json
+++ b/packages/tmdb/package.json
@@ -1,6 +1,18 @@
 {
   "name": "@repo/tmdb",
   "version": "0.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "src/index.ts",
+  "private": true,
+  "scripts": {
+    "lint": "eslint . --max-warnings 0",
+    "generate:component": "turbo gen react-component",
+    "watch": "ts-node --transpile-only src/build.ts --watch"
+  },
+  "devDependencies": {
+    "@repo/axios": "*",
+    "@repo/common": "*"
+  },
+  "files": [
+    "src"
+  ]
 }
